--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -317,7 +317,7 @@
     "        ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
     "        hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
     "        estimator (EstimatorV2): Estimator primitive instance\n",
-    "        callback_dict: Dictionary for storing intermediate results\n",
+    "        cost_history_dict: Dictionary for storing intermediate results\n",
     "\n",
     "    Returns:\n",
     "        float: Energy estimate\n",
@@ -326,10 +326,10 @@
     "    result = estimator.run(pubs=[pub]).result()\n",
     "    energy = result[0].data.evs[0]\n",
     "\n",
-    "    callback_dict[\"iters\"] += 1\n",
-    "    callback_dict[\"prev_vector\"] = params\n",
-    "    callback_dict[\"cost_history\"].append(energy)\n",
-    "    print(f\"Iters. done: {callback_dict['iters']} [Current cost: {energy}]\")\n",
+    "    cost_history_dict[\"iters\"] += 1\n",
+    "    cost_history_dict[\"prev_vector\"] = params\n",
+    "    cost_history_dict[\"cost_history\"].append(energy)\n",
+    "    print(f\"Iters. done: {cost_history_dict['iters']} [Current cost: {energy}]\")\n",
     "\n",
     "    return energy"
    ]
@@ -340,69 +340,7 @@
    "id": "179ba2c4",
    "metadata": {},
    "source": [
-    "Note that, in addition to the array of optimization parameters that must be the first argument, we use additional arguments to pass the terms needed in the cost function."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d1c3448",
-   "metadata": {},
-   "source": [
-    "### Creating a callback function\n",
-    "\n",
-    "Callback functions are a standard way for users to obtain additional information about the status of an iterative algorithm.  The standard SciPy callback routine allows for returning only the interim vector at each iteration.  However, it is possible to do much more than this.  Here, we show how to use a mutable object, such as a dictionary, to store the current vector at each iteration, for example in case we need to restart the routine due to failure, and also return the current iteration number and average time per iteration."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d0f2a5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_callback(ansatz, hamiltonian, estimator, callback_dict):\n",
-    "    \"\"\"Return callback function that uses Estimator instance,\n",
-    "    and stores intermediate values into a dictionary.\n",
-    "\n",
-    "    Parameters:\n",
-    "        ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
-    "        hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
-    "        estimator (EstimatorV2): Estimator primitive instance\n",
-    "        callback_dict (dict): Mutable dict for storing values\n",
-    "\n",
-    "    Returns:\n",
-    "        Callable: Callback function object\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def callback(current_vector):\n",
-    "        \"\"\"Callback function storing previous solution vector,\n",
-    "        computing the intermediate cost value, and displaying number\n",
-    "        of completed iterations and average time per iteration.\n",
-    "\n",
-    "        Values are stored in pre-defined 'callback_dict' dictionary.\n",
-    "\n",
-    "        Parameters:\n",
-    "            current_vector (ndarray): Current vector of parameters\n",
-    "                                      returned by optimizer\n",
-    "        \"\"\"\n",
-    "        # Keep track of the number of iterations\n",
-    "        callback_dict[\"iters\"] += 1\n",
-    "        # Set the prev_vector to the latest one\n",
-    "        callback_dict[\"prev_vector\"] = current_vector\n",
-    "        # Compute the value of the cost function at the current vector\n",
-    "        # This adds an additional function evaluation\n",
-    "        pub = (ansatz, [hamiltonian], [current_vector])\n",
-    "        result = estimator.run(pubs=[pub]).result()\n",
-    "        current_cost = result[0].data.evs[0]\n",
-    "        callback_dict[\"cost_history\"].append(current_cost)\n",
-    "        # Print to screen on single line\n",
-    "        print(\n",
-    "            \"Iters. done: {} [Current cost: {}]\".format(callback_dict[\"iters\"], current_cost),\n",
-    "            end=\"\\r\",\n",
-    "            flush=True,\n",
-    "        )\n",
-    "\n",
-    "    return callback"
+    "Note that, in addition to the array of optimization parameters that must be the first argument, we use additional arguments to pass the terms needed in the cost function, such as the `cost_history_dict`. This dictionary stores the current vector at each iteration, for example in case you need to restart the routine due to failure, and also returns the current iteration number and average time per iteration."
    ]
   },
   {
@@ -412,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "callback_dict = {\n",
+    "cost_history_dict = {\n",
     "    \"prev_vector\": None,\n",
     "    \"iters\": 0,\n",
     "    \"cost_history\": [],\n",
@@ -426,7 +364,7 @@
    "source": [
     "We can now use a classical optimizer of our choice to minimize the cost function. Here, we use the [COBYLA routine from SciPy through the `minimize` function](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html). Note that when running on real quantum hardware, the choice of optimizer is important, as not all optimizers handle noisy cost function landscapes equally well.\n",
     "\n",
-    "To begin the routine, we specify a random initial set of parameters:"
+    "To begin the routine, specify a random initial set of parameters:"
    ]
   },
   {
@@ -490,14 +428,11 @@
     "    estimator = Estimator(session=session)\n",
     "    estimator.options.default_shots = 10000\n",
     "\n",
-    "    callback = build_callback(ansatz_isa, hamiltonian_isa, estimator, callback_dict)\n",
-    "\n",
     "    res = minimize(\n",
     "        cost_func,\n",
     "        x0,\n",
     "        args=(ansatz_isa, hamiltonian_isa, estimator),\n",
     "        method=\"cobyla\",\n",
-    "        callback=callback,\n",
     "    )"
    ]
   },
@@ -550,7 +485,7 @@
    "id": "733431ad",
    "metadata": {},
    "source": [
-    "If the procedure terminates correctly, then the `prev_vector` and `iters` values in our `callback_dict` dictionary should be equal to the solution vector and total number of function evaluations, respectively.  This is easy to verify:"
+    "If the procedure terminates correctly, then the `prev_vector` and `iters` values in our `cost_history_dict` dictionary should be equal to the solution vector and total number of function evaluations, respectively.  This is easy to verify:"
    ]
   },
   {
@@ -571,7 +506,7 @@
     }
    ],
    "source": [
-    "all(callback_dict[\"prev_vector\"] == res.x)"
+    "all(cost_history_dict[\"prev_vector\"] == res.x)"
    ]
   },
   {
@@ -592,7 +527,7 @@
     }
    ],
    "source": [
-    "callback_dict[\"iters\"] == res.nfev"
+    "cost_history_dict[\"iters\"] == res.nfev"
    ]
   },
   {
@@ -628,7 +563,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(range(callback_dict[\"iters\"]), callback_dict[\"cost_history\"])\n",
+    "ax.plot(range(cost_history_dict[\"iters\"]), cost_history_dict[\"cost_history\"])\n",
     "ax.set_xlabel(\"Iterations\")\n",
     "ax.set_ylabel(\"Cost\")\n",
     "plt.draw()"
