--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -748,7 +748,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -762,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   }
  },
  "nbformat": 4,
