--- a/tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb
+++ b/tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "### Step 2: Optimize circuits for quantum hardware execution\n",
     "\n",
-    "Before you run our circuit on the hardware, first optimize it for hardware execution. This process involves a few steps:\n",
+    "You must optimize your circuit before running it on hardware. This process involves a few steps:\n",
     "\n",
     "- Pick a qubit layout that maps the virtual qubits of our circuit to physical qubits on the hardware.\n",
     "- Insert swap gates as needed to route interactions between qubits that are not connected.\n",
