--- a/tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb
+++ b/tutorials/combine-error-mitigation-options-with-the-estimator-primitive/combine-error-mitigation-options-with-the-estimator-primitive.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "You must optimize your circuit before running it on hardware. This process involves a few steps:\n",
     "\n",
-    "- Pick a qubit layout that maps the virtual qubits of our circuit to physical qubits on the hardware.\n",
+    "- Pick a qubit layout that maps the virtual qubits of your circuit to physical qubits on the hardware.\n",
     "- Insert swap gates as needed to route interactions between qubits that are not connected.\n",
     "- Translate the gates in our circuit to [Instruction Set Architecture (ISA)](https://docs.quantum.ibm.com/transpile#instruction-set-architecture) instructions that can directly be executed on the hardware.\n",
     "- Perform circuit optimizations to minimize the circuit depth and gate count.\n",
