--- a/docs/start/install.mdx
+++ b/docs/start/install.mdx
@@ -197,7 +197,8 @@ Additionally, Qiskit only supports the CPython implementation of the Python lang
 
   - Linux x86_64 (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/) packaging specification).
   - macOS x86_64 (10.12 or later)
-  - Windows 64 bit
+  - macOS ARM64 (11.0 or newer)
+  - Windows 64-bit (Windows 10 and later supported)
 </details>
 
 <details>
@@ -221,9 +222,8 @@ Additionally, Qiskit only supports the CPython implementation of the Python lang
 
   - Linux ppc64le (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/)packaging specification)
   - Linux s390x (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/) packaging specification)
-  - macOS ARM64 (10.15 or newer)
   - Linux i686 (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/) packaging specification)
-  - Windows 32 bit
+  - Windows 10 32-bit
 </details>
 
 ## Qiskit versioning
