--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "### Step 1. Map the problem to a quantum-native format\n",
     "\n",
-    "In a quantum program, *quantum circuits* are the native format in which to represent quantum instructions, and *operators* represent the observables to be measured. When creating a circuit, you'll usually create a new [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit) object, then add instructions to it in sequence."
+    "In a quantum program, *quantum circuits* are the native format in which to represent quantum instructions, and *operators* represent the observables to be measured. When creating a circuit, you'll usually create a new [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) object, then add instructions to it in sequence."
    ]
   },
   {
@@ -119,7 +119,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit) in the documentation for all available operations."
+    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) in the documentation for all available operations."
    ]
   },
   {
