--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "Although the problem instance in question for the VQE algorithm can come from a variety of domains, the form for execution through Qiskit Runtime is the same. Qiskit provides a convenience class for expressing Hamiltonians in Pauli form, and a collection of widely used ansatz circuits in the [`qiskit.circuit.library`](https://docs.quantum-computing.ibm.com/api/qiskit/circuit_library).\n",
     "\n",
-    "Here, our example Hamiltonian is derived from a quantum chemistry problem."
+    "This example Hamiltonian is derived from a quantum chemistry problem."
    ]
   },
   {
