--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -45,7 +45,7 @@ See this announcement in the [release notes](/api/qiskit/release-notes/1.1#depre
 
 Qiskit [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit) objects
 can now contain typed classical variables for real-time classical computation.
-Use this feature to do classical calulations based on results of qubit
+Use this feature to do classical calculations based on results of qubit
 measurements.
 
 ```python
