clean up some code

--- a/tutorials/build-repetition-codes/build-repetition-codes.ipynb
+++ b/tutorials/build-repetition-codes/build-repetition-codes.ipynb
@@ -69,9 +69,7 @@
     "# Qiskit Runtime\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "\n",
-    "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=12)\n",
-    "print(f\">>> Connected to {backend.name}.\")"
+    "service = QiskitRuntimeService()"
    ]
   },
   {
@@ -90,6 +88,17 @@
     "### Build a bit-flip stabilizer circuit\n",
     "\n",
     "The bit-flip code is among the simplest examples of a stabilizer code. It protects the state against a single bit-flip (X) error on any of the encoding qubits. Consider the action of bit-flip error $X$, which maps $|0\\rangle \\rightarrow |1\\rangle$ and $|1\\rangle \\rightarrow |0\\rangle$ on any of our qubits, then we have $\\epsilon = \\{E_0, E_1, E_2 \\} = \\{IIX, IXI, XII\\}$. The code requires five qubits: three are used to encode the protected state, and the remaining two are used as stabilizer measurement ancillas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_qubits = 5\n",
+    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=num_qubits)\n",
+    "backend"
    ]
   },
   {
@@ -361,7 +370,9 @@
    "source": [
     "## Step 4: Post-process, return result in classical format\n",
     "\n",
-    "You can see that the bit flip code detected and corrected many errors; resulting in fewer errors overall. "
+    "You can see that the bit flip code detected and corrected many errors; resulting in fewer errors overall. \n",
+    "\n",
+    "We can see that using a repetition code method is useful at ..., which is validated by the lower bit flip error rate ..."
    ]
   },
   {
@@ -402,12 +413,13 @@
     }
    ],
    "source": [
-    "non_corrected_marginalized_data_result = result_no_correction.data.data.get_counts()\n",
-    "non_corrected_marginalized_syndrome_result = result_no_correction.data.syndrome.get_counts()\n",
+    "# non-corrected marginalized results\n",
+    "data_result = result_no_correction.data.data.get_counts()\n",
+    "marginalized_syndrome_result = result_no_correction.data.syndrome.get_counts()\n",
     "\n",
-    "print(f'Completed bit code experiment data measurement counts (without correction): {non_corrected_marginalized_data_result}')\n",
-    "print(f'Completed bit code experiment syndrome measurement counts (without correction): {non_corrected_marginalized_syndrome_result}')\n",
-    "decode_result(non_corrected_marginalized_data_result, non_corrected_marginalized_syndrome_result)"
+    "print(f'Completed bit code experiment data measurement counts (no correction): {data_result}')\n",
+    "print(f'Completed bit code experiment syndrome measurement counts (no correction): {marginalized_syndrome_result}')\n",
+    "decode_result(data_result, marginalized_syndrome_result)"
    ]
   },
   {
@@ -428,12 +440,13 @@
     }
    ],
    "source": [
-    "corrected_marginalized_data_result = result_with_correction.data.data.get_counts()\n",
-    "corrected_marginalized_syndrome_result = result_with_correction.data.syndrome.get_counts()\n",
+    "# corrected marginalized results\n",
+    "corrected_data_result = result_with_correction.data.data.get_counts()\n",
+    "corrected_syndrome_result = result_with_correction.data.syndrome.get_counts()\n",
     "\n",
-    "print(f'Completed bit code experiment data measurement counts (corrected): {corrected_marginalized_data_result}')\n",
-    "print(f'Completed bit code experiment syndrome measurement counts (corrected): {corrected_marginalized_syndrome_result}')\n",
-    "decode_result(corrected_marginalized_data_result, corrected_marginalized_syndrome_result)"
+    "print(f'Completed bit code experiment data measurement counts (corrected): {corrected_data_result}')\n",
+    "print(f'Completed bit code experiment syndrome measurement counts (corrected): {corrected_syndrome_result}')\n",
+    "decode_result(corrected_data_result, corrected_syndrome_result)"
    ]
   },
   {
