--- a/tutorials/build-repetition-codes/build-repetition-codes.ipynb
+++ b/tutorials/build-repetition-codes/build-repetition-codes.ipynb
@@ -93,6 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b588703a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +371,7 @@
    "source": [
     "## Step 4: Post-process, return result in classical format\n",
     "\n",
-    "You can see that the bit flip code detected and corrected many errors; resulting in fewer errors overall. \n",
+    "You can see that the bit flip code detected and corrected many errors; resulting in fewer errors overall.\n",
     "\n",
     "We can see that using a repetition code method is useful at ..., which is validated by the lower bit flip error rate ..."
    ]
@@ -499,7 +500,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -513,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "vscode": {
    "interpreter": {
