--- a/docs/run/get-backend-information.ipynb
+++ b/docs/run/get-backend-information.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "214e51c9-4818-408b-9421-3e513e77a713",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2126b05d-1cc8-4230-bfe3-25461a0f1b5b",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -23,21 +21,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2074e1b8-d294-4c5b-82ba-cd9d7a190598",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('simulator_stabilizer')>,\n",
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_kyoto')>,\n",
        " <IBMBackend('ibm_osaka')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibmq_qasm_simulator')>,\n",
-       " <IBMBackend('simulator_extended_stabilizer')>,\n",
-       " <IBMBackend('simulator_mps')>,\n",
-       " <IBMBackend('simulator_statevector')>,\n",
-       " <IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_kyoto')>]"
+       " <IBMBackend('ibm_sherbrooke')>]"
       ]
      },
      "execution_count": 1,
@@ -55,7 +47,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad27cfef-1684-4c77-80ab-aef61d204acd",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend) instance representing that particular backend:"
@@ -64,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8716516-ded8-45b5-9304-fc199fa3a877",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f8f3f5-4014-454b-8783-09291e246f69",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -101,7 +90,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9db4aaa2-f23c-4141-b7aa-07f84a679292",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +112,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de23dcc-c2ba-4338-b1e8-4086ed653240",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -132,17 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4c296c69-6f30-4cf1-97c5-42989e30db8b",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<IBMBackend('simulator_stabilizer')>"
+       "<IBMBackend('ibm_kyoto')>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +139,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc892148-094e-4a5b-8514-a96436dce1b1",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -166,7 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e7e3c43-4aa1-43d2-93b5-31e4abbb3dd5",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +176,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac81677d-12bd-4671-8452-3107edcfbd50",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend)."
@@ -200,7 +183,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b212d0-c5dc-4640-8a00-76255784ef72",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -216,7 +198,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c1fc8ca-fd06-409f-9a5a-ce99d8b936e4",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +217,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce06354-4fcb-444d-a2d6-abe6caf1d318",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -247,7 +227,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c8b88454-dfef-4c35-b4e2-a03fe34eaa07",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +246,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "931a81bc-8bd1-4aba-bfa5-e05984df713d",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -276,7 +254,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "040f5267-f635-4871-89bb-14a38904033e",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +273,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c28c0dc-6d24-4554-bbe8-8e6c51f563d9",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -312,7 +288,7 @@
  "metadata": {
   "description": "Find and filter available backends, get configuration and calibration data programmatically.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.2"
   },
   "title": "Get backend information with Qiskit"
  },
